Closed
Bug 806310
Opened 13 years ago
Closed 13 years ago
"ASSERTION: canStoreInRuleTree must be false for inherited structs unless all properties have been specified with values other than inherit"
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
| Tracking | Status | |
|---|---|---|
| firefox18 | --- | fixed |
People
(Reporter: jruderman, Unassigned)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ASSERTION: canStoreInRuleTree must be false for inherited structs unless all properties have been specified with values other than inherit: '!canStoreInRuleTree || aRuleDetail == eRuleFullReset || (aStartStruct && aRuleDetail == eRulePartialReset)', file layout/style/nsRuleNode.cpp, line 3555
| Reporter | ||
Comment 1•13 years ago
|
||
Comment 2•13 years ago
|
||
Hmm. Looks like a regression from bug 804970.
In particular, CheckFontCallback changes full/partial reset RuleDetail values to the corresponding full/partial mixed values if IsRelativeLengthUnit(), which I assume is being hit here. But we can in fact store those in the ruletree now, for rem. So we should probably just check for em, not rem, in CheckFontCallback.... David?
Blocks: 804970
Attachment #680276 -
Flags: review?(bzbarsky)
Comment 4•13 years ago
|
||
Comment on attachment 680276 [details] [diff] [review]
Fix CheckFontCallback to match 'rem' unit changes. ()
r=me
Attachment #680276 -
Flags: review?(bzbarsky) → review+
Updated•13 years ago
|
Flags: in-testsuite+
Comment 6•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/60df5b3e7137
https://hg.mozilla.org/mozilla-central/rev/98e22583895a
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Fix rolled in to https://hg.mozilla.org/releases/mozilla-aurora/rev/1f9ef298ceeb
status-firefox18:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•