Fix CheckFontCallback to match 'rem' unit changes.  (Bug 806310)  r=bzbarsky